Tts integration resolved in gateway